@@ -33,6 +33,9 @@ public class StaticPKIXX509CredentialTrustEngineFactoryBean extends AbstractFact
     
     /** List of PKIX validation info. */
     private List<PKIXValidationInformation> pkixInfo;
+    
+    /** Set of trusted names. */
+    private Set<String> trustedNames;
 
     /**
      * Gets the list of PKIX validation info.
@@ -51,6 +54,24 @@ public class StaticPKIXX509CredentialTrustEngineFactoryBean extends AbstractFact
     public void setPKIXInfo(List<PKIXValidationInformation> newPKIXInfo) {
         pkixInfo = newPKIXInfo;
     }
+    
+    /**
+     * Gets the set of trusted names.
+     * 
+     * @return the set of trusted names
+     */
+    public Set<String> getTrustedNames() {
+        return trustedNames;
+    }
+
+    /**
+     * Sets the set of trusted names.
+     * 
+     * @param newTrustedNames the set of trusted names
+     */
+    public void setTrustedNames(Set<String> newTrustedNames) {
+        trustedNames = newTrustedNames;
+    }
 
     /** {@inheritDoc} */
     public Class getObjectType() {
@@ -59,7 +80,10 @@ public class StaticPKIXX509CredentialTrustEngineFactoryBean extends AbstractFact
     
     /** {@inheritDoc} */
     protected Object createInstance() throws Exception {
-        Set<String> names = Collections.emptySet();
+        Set<String> names = getTrustedNames();
+        if (names == null) {
+            names = Collections.emptySet();
+        }
         StaticPKIXValidationInformationResolver pkixResolver = 
             new StaticPKIXValidationInformationResolver(getPKIXInfo(), names);
         
