@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<security:TrustEngine 
+    id="StaticPKIXX509CredentialTrustEngine" 
+    xsi:type="security:StaticPKIXX509Credential"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:security="urn:mace:shibboleth:2.0:security"
+    xsi:schemaLocation="urn:mace:shibboleth:2.0:security classpath:/schema/shibboleth-2.0-security.xsd">
+    
+    <security:TrustedName>FOO</security:TrustedName>
+    <security:TrustedName>BAR</security:TrustedName>
+    <security:TrustedName>BAZ</security:TrustedName>
+    
+    <security:ValidationInfo id="InlinePKIXValidationInfo" xsi:type="security:PKIXInline" verifyDepth="5">
+    </security:ValidationInfo>
+    
+</security:TrustEngine>
+
